list entries shared with me, remove them
