# store/share.js
@@ -1,7 +1,8 @@
 export const state = () => ({
     results: [],
     sharedList: [],
-    entryBeingShared: null
+    entryBeingShared: null,
+    sharedWithMe: []
 })
 
 // mutations should update state
@@ -16,6 +17,10 @@ export const mutations = {
 
     setSharedList(state, data) {
         state.sharedList = data
+    },
+
+    setSharedWithMe(state, data) {
+        state.sharedWithMe = data
     }
 }
 
@@ -48,11 +53,12 @@ export const actions = {
         }
     },
 
-    async shareEntry({ dispatch }, { entryid, users }) {
+    async shareEntry({ dispatch }, { entryid, owner, users }) {
         try {
             for (let i = 0; i < users.length; ++i) {
                 const res = await this.$axios.post(`/api/share`, {
                     entryid: entryid,
+                    owner: owner,
                     userid: users[i].userid
                 })
                 if (res.status === 201) {
@@ -68,11 +74,13 @@ export const actions = {
         }
     },
 
-    async unshareEntry({ dispatch }, { entryid, userid }) {
+    async unshareEntry({ dispatch }, { entryid, userid, type }) {
         try {
             const res = await this.$axios.delete(`/api/share/${entryid}/${userid}`)
             if (res.status === 204) {
-                await dispatch('getSharedList', { entryid })
+                (type === "owner")
+                    ? await dispatch('getSharedList', { entryid })
+                    : await dispatch('getSharedWithMe', { userid })
             }
         } catch (err) {
             if (err.response.status === 400) {
@@ -80,6 +88,32 @@ export const actions = {
             }
         }
     },
+
+    async getSharedWithMe({ commit }, { userid }) {
+        try {
+            const res = await this.$axios.get(`/api/share/${userid}`)
+            if (res.status === 200) {
+                for (let i = 0; i < res.data.length; ++i) {
+                    res.data[i].date = await parseDate(res.data[i].date)
+                }
+                await commit('setSharedWithMe', res.data)
+            }
+        } catch (err) {
+            if (err.response.status === 400) {
+                alert('Something went wrong, please try again')
+            } else if (err.response.status === 404) {
+                await commit('setSharedWithMe', [])
+            }
+        }
+    },
 }
 
 
+/// External functions
+async function parseDate(date) {
+    let prettyDate = ""
+    const yearMonth = date.split('-')
+    let day = yearMonth[2].split('T')
+    prettyDate += yearMonth[1] + " / " + day[0] + " / " + yearMonth[0]
+    return prettyDate
+}
